--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,52 @@
-* {
-  background-color: white;
-  color: red;
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  font-family: sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+ul, ol {
+  list-style: none;
+}
+
+body {
+  font-family: 'Arial', sans-serif;
+  color: var(--background-contrast-text);
+  background-color: var(--background);
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+input, textarea, select, button {
+  font-family: inherit;
+  font-size: inherit;
+  border: none;
+  outline: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+input:focus, textarea:focus, select:focus {
+  outline: none;
 }
