--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   font-family: sans-serif;
 }
@@ -16,12 +17,13 @@ a {
   color: inherit;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: "Arial", sans-serif;
   color: var(--background-contrast-text);
   background-color: var(--background);
 }
@@ -36,7 +38,10 @@ table {
   width: 100%;
 }
 
-input, textarea, select, button {
+input,
+textarea,
+select,
+button {
   font-family: inherit;
   font-size: inherit;
   border: none;
@@ -47,6 +52,8 @@ button {
   cursor: pointer;
 }
 
-input:focus, textarea:focus, select:focus {
+input:focus,
+textarea:focus,
+select:focus {
   outline: none;
 }
