--- a/src/styles/__typography.css
+++ b/src/styles/__typography.css
@@ -19,12 +19,14 @@
   --font-size-subtitle-variant: calc(var(--font-size-ratio) * 0.8);
   --font-size-body: calc(var(--font-size-ratio) * 1);
   --font-size-body-variant: calc(var(--font-size-ratio) * 1.2);
+  --font-size-caption: calc(var(--font-size-ratio) * 0.9);
+  --font-size-caption-variant: calc(var(--font-size-ratio) * 0.7);
   --font-size-call-to-action-large: calc(var(--font-size-ratio) * 1.3);
-  --font-size-call-to-action-medium: calc(var(--font-size-ratio) * 1.0);
+  --font-size-call-to-action-medium: calc(var(--font-size-ratio) * 1);
   --font-size-call-to-action-small: calc(var(--font-size-ratio) * 0.8);
   /* Line height */
   --line-height-h1: calc(var(--font-size-ratio) * 4.2);
-  --line-height-h2: calc(var(--font-size-ratio) * 3.0);
+  --line-height-h2: calc(var(--font-size-ratio) * 3);
   --line-height-h3: calc(var(--font-size-ratio) * 2.2);
   --line-height-h4: calc(var(--font-size-ratio) * 1.6);
   --line-height-h5: calc(var(--font-size-ratio) * 1.4);
@@ -33,7 +35,9 @@
   --line-height-subtitle-variant: calc(var(--font-size-ratio) * 1.1);
   --line-height-body: calc(var(--font-size-ratio) * 1.2);
   --line-height-body-variant: calc(var(--font-size-ratio) * 1.5);
+  --line-height-caption: calc(var(--font-size-ratio) * 1.1);
+  --line-height-caption-variant: calc(var(--font-size-ratio) * 0.9);
   --line-height-call-to-action-large: calc(var(--font-size-ratio) * 1.3);
-  --line-height-call-to-action-medium: calc(var(--font-size-ratio) * 1.0);
+  --line-height-call-to-action-medium: calc(var(--font-size-ratio) * 1);
   --line-height-call-to-action-small: calc(var(--font-size-ratio) * 0.8);
 }
